[package]
name = "debounce-button-eng"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Debounced button state machine built on embedded-hal InputPin"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1"] }
